--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -39,27 +39,7 @@ $font-color: #333333; /* Default font color */
 $background-color: #f9f9f9; /* Background color */
 
 /* Viewport Mixins */
-
-@mixin respond-to($breakpoint) {
-  @if $breakpoint == xs {
-    @media (max-width: 575.98px) {
-      @content;
-    }
-  } @else if $breakpoint == sm {
-    @media (min-width: 576px) and (max-width: 767.98px) {
-      @content;
-    }
-  } @else if $breakpoint == md {
-    @media (min-width: 768px) and (max-width: 991.98px) {
-      @content;
-    }
-  } @else if $breakpoint == lg {
-    @media (min-width: 992px) and (max-width: 1199.98px) {
-      @content;
-    }
-  } @else if $breakpoint == xl {
-    @media (min-width: 1200px) {
-      @content;
-    }
-  }
-}
+$breakpoint-mobile: 576px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 992px;
+$breakpoint-desktop-xl: 1200px;
