added footer icons

--- a/skill-exchange/src/styles/App.scss
+++ b/skill-exchange/src/styles/App.scss
@@ -1,6 +1,8 @@
 // src/styles/App.scss
 @import './variables';
 @import './animations';
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
+
 
 body {
   font-family: $font-family;
