adding by category part

--- a/skill-exchange/src/styles/components/CTA.scss
+++ b/skill-exchange/src/styles/components/CTA.scss
@@ -62,7 +62,8 @@
     }
 
     .cta-text {
-      font-size: $font-size-large;
+      font-size: $font-size-medium;
+      line-height: 24px;
       color: $color-text;
       margin-top: 0;
     }
