--- a/skill-exchange/src/styles/components/HowItWorks.scss
+++ b/skill-exchange/src/styles/components/HowItWorks.scss
@@ -18,7 +18,7 @@
     font-size: $font-size-heading;
     color: $primary-color;
     margin-bottom: $spacing-lg;
-    font-family: $font-family-logo;
+    font-family: $font-family-heading;
   }
 
   .scroll-wrapper {
@@ -104,7 +104,7 @@
       color: $primary-color;
       font-weight: bold;
       margin-bottom: $spacing-sm;
-      font-family: $font-family-logo;
+      font-family: $font-family-heading;
     }
 
     .step-title {
