--- a/skill-exchange/src/styles/components/CTA.scss
+++ b/skill-exchange/src/styles/components/CTA.scss
@@ -56,7 +56,8 @@
 
     .cta-heading {
       font-size: $font-size-xxl;
-      font-family: Tiempos Headline, serif;
+      width: 120%;
+      font-family: $font-family-heading;
       color: $black;
       margin-top: 0;
     }
@@ -75,9 +76,10 @@
       input {
         padding: $spacing-sm;
         margin-bottom: $spacing-sm;
-        border: 1px solid $color-border;
+        border: 2px solid $color-border;
         border-radius: $border-radius;
         font-size: $font-size-small;
+        font-family: $font-family-text;
         width: 90%;
         transition: border-color $transition-speed;
 
