--- a/skill-exchange/src/styles/components/TopCategories.scss
+++ b/skill-exchange/src/styles/components/TopCategories.scss
@@ -9,7 +9,7 @@
     color: $color-text;
     text-align: center;
     margin-bottom: $spacing-lg;
-    font-family: $font-family-logo;
+    font-family: $font-family-heading;
   }
 
   .categories-grid {
