--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asset&family=Bungee+Tint&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+
+
 /* Color Variables */
 // $primary-color: #456dff;
 $primary-color: #AA2B2D; //red
@@ -38,8 +42,9 @@ $box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); /* So
 $transition-speed: 0.3s; /* Speed for transitions */
 
 /* Font */
-$font-family: 'Circular', 'Roboto', sans-serif; /* Font family */
+$font-family-text: 'Reddit Sans', 'Roboto', sans-serif;
 $font-family-logo: 'Playfair Display', serif;
+$font-family-heading: "Bungee Tint", serif;
 $font-color: #333333; /* Default font color */
 $background-color: #f9f9f9; /* Background color */
 
