our mission page

--- a/skill-exchange/src/styles/components/TopCategories.scss
+++ b/skill-exchange/src/styles/components/TopCategories.scss
@@ -6,7 +6,7 @@
 
   &__heading {
     font-size: $font-size-heading;
-    color: $color-text;
+    color: $black;
     text-align: center;
     margin-bottom: $spacing-lg;
     font-family: $font-family-heading;
