--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Asset&family=Bungee+Tint&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+NP+Hmong:wght@400..700');
 
 
 /* Color Variables */
@@ -44,7 +45,7 @@ $transition-speed: 0.3s; /* Speed for transitions */
 /* Font */
 $font-family-text: 'Reddit Sans', 'Roboto', sans-serif;
 $font-family-logo: 'Playfair Display', serif;
-$font-family-heading: "Bungee Tint", serif;
+$font-family-heading: "Noto Serif NP Hmong", serif;
 $font-color: #333333; /* Default font color */
 $background-color: #f9f9f9; /* Background color */
 
