--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -7,14 +7,14 @@
 // $primary-color: #456dff;
 $primary-color: #AA2B2D; //red
 $color-primary: #5bc0de; //blue
-$color-primary-dark: #1075a8;
+$color-primary-dark: #0c4ca9d4;
 // $secondary-color: #FFC700; //yellow
 $secondary-color: #AA2B2D;
 $color-background: #f7f7f7;
 $color-text: rgb(72 72 72);
 $color-card-background: #ffffff;
 $color-border: #ebebeb;
-$color-hover: #79b2d2;
+$color-hover: #0c4ca9d4;
 $dark: #151522;
 $white: #fff; 
 $black: #000;
@@ -24,7 +24,7 @@ $font-size-small: 14px; /* Small font size */
 $font-size-medium: 18px; /* Medium font size */
 $font-size-large: 20px; /* Large font size */
 $font-size-heading: 36px; /* Heading font size */
-$font-size-xxl: 42px;
+$font-size-xxl: 48px;
 
 /* Spacing Variables */
 $spacing-xs: 5px; /* Extra small spacing */
