--- a/skill-exchange/src/styles/pages/OurMission.scss
+++ b/skill-exchange/src/styles/pages/OurMission.scss
@@ -23,7 +23,7 @@
     p {
       margin-bottom: $spacing-lg; // Ensure this variable is defined
       line-height: 1.6; // Adjust for readability
-      text-align: center;
+      text-align: left;
       font-size: $font-size-medium;
     }
   }
